Bug 320056 - Marble crashes when trying to open http://opencellid.org/cells.kml
Summary: Marble crashes when trying to open http://opencellid.org/cells.kml
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-05-20 15:44 UTC by Bernhard Beschow
Modified: 2013-05-20 16:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-05-20 15:44:02 UTC
Application: marble (1.5.20 (development snapshot))
KDE Platform Version: 4.10.3 (Compiled from sources)
Qt Version: 4.8.4
Operating System: Linux 3.9.2-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
The crash happens since commit 8ee588969b41890a6bd90f9b45eeb85658edf84f.

-- Backtrace:
Application: Marble – Virtueller Globus (marble), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f98e99c2780 (LWP 2932))]

Thread 10 (Thread 0x7f98d1775700 (LWP 2933)):
#0  0x00007f98e5f5f09d in poll () from /usr/lib/libc.so.6
#1  0x00007f98dfb07134 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f98dfb0723c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f98e79078f6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f98e78d996f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f98e78d9c65 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f98e77d867f in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f98e78bb113 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f98c94b0700 (LWP 2934)):
#0  0x00007fff38d9fb17 in ?? ()
#1  0x00007f98e7907760 in ?? () from /usr/lib/libQtCore.so.4
#2  0x00000002e5e8aea8 in ?? ()
#3  0x00007f98c4002660 in ?? ()
#4  0x00007f98c94afc68 in ?? ()
#5  0x00007f98c94afc00 in ?? ()
#6  0x000000007fffffff in ?? ()
#7  0x00007f98c94afc70 in ?? ()
#8  0x00007f98e5f7927d in clock_gettime () from /usr/lib/libc.so.6
#9  0x00007f98e782f497 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f98e7908e35 in ?? () from /usr/lib/libQtCore.so.4
#11 0x00007f98e79076ac in ?? () from /usr/lib/libQtCore.so.4
#12 0x00007f98e7907755 in ?? () from /usr/lib/libQtCore.so.4
#13 0x00007f98dfb067dd in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#14 0x00007f98dfb07053 in ?? () from /usr/lib/libglib-2.0.so.0
#15 0x00007f98dfb0723c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#16 0x00007f98e79078f6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#17 0x00007f98e78d996f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#18 0x00007f98e78d9c65 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#19 0x00007f98e77d867f in QThread::exec() () from /usr/lib/libQtCore.so.4
#20 0x00007f98e78bb113 in ?? () from /usr/lib/libQtCore.so.4
#21 0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#22 0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#23 0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f98be165700 (LWP 2935)):
#0  0x00007f98e54918b4 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f98e44c12cd in ?? () from /usr/lib/libQtWebKit.so.4
#2  0x00007f98e44c1309 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f987d862700 (LWP 2936)):
#0  0x00007f98e54918b4 in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f98e420374d in ?? () from /usr/lib/libQtWebKit.so.4
#2  0x00007f98e44f0a66 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f9875ffb700 (LWP 2942)):
#0  0x00007f98e5491c61 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f98e77db1d4 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f98e77ce915 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f9877fff700 (LWP 2943)):
#0  0x00007f98e5491c61 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f98e77db1d4 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f98e77ce915 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f98767fc700 (LWP 2944)):
#0  0x00007f98e5491c61 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f98e77db1d4 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f98e77ce915 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f98777fe700 (LWP 2945)):
#0  0x00007f98e5f5f09d in poll () from /usr/lib/libc.so.6
#1  0x00007f98dfb07134 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f98dfb0723c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f98e79078f6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f98e78d996f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f98e78d9c65 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f98e77d867f in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f9876ffd700 (LWP 2946)):
#0  0x00007fff38d9fb17 in ?? ()
#1  0x00007f98e7907760 in ?? () from /usr/lib/libQtCore.so.4
#2  0x00000002e77d0cb4 in ?? ()
#3  0x00007f985c002660 in ?? ()
#4  0x00007f9876ffcc68 in ?? ()
#5  0x00007f9876ffcc00 in ?? ()
#6  0x000000007fffffff in ?? ()
#7  0x00007f9876ffcc70 in ?? ()
#8  0x00007f98e5f7927d in clock_gettime () from /usr/lib/libc.so.6
#9  0x00007f98e782f497 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f98e7908e35 in ?? () from /usr/lib/libQtCore.so.4
#11 0x00007f98e79076ac in ?? () from /usr/lib/libQtCore.so.4
#12 0x00007f98e7907755 in ?? () from /usr/lib/libQtCore.so.4
#13 0x00007f98dfb067dd in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#14 0x00007f98dfb07053 in ?? () from /usr/lib/libglib-2.0.so.0
#15 0x00007f98dfb0723c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#16 0x00007f98e79078f6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#17 0x00007f98e78d996f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#18 0x00007f98e78d9c65 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#19 0x00007f98e77d867f in QThread::exec() () from /usr/lib/libQtCore.so.4
#20 0x00007f98e78bb113 in ?? () from /usr/lib/libQtCore.so.4
#21 0x00007f98e77dad1f in ?? () from /usr/lib/libQtCore.so.4
#22 0x00007f98e548ddd2 in start_thread () from /usr/lib/libpthread.so.0
#23 0x00007f98e5f67ced in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f98e99c2780 (LWP 2932)):
[KCrash Handler]
#5  0x00007f98e8ee6e33 in Marble::FileLoaderPrivate::createFilterProperties (this=this@entry=0x2b7eb50, container=<optimized out>) at /home/shentey/Projekte/marble/src/src/lib/FileLoader.cpp:332
#6  0x00007f98e8ee6e03 in Marble::FileLoaderPrivate::createFilterProperties (this=this@entry=0x2b7eb50, container=<optimized out>) at /home/shentey/Projekte/marble/src/src/lib/FileLoader.cpp:322
#7  0x00007f98e8ee7f61 in Marble::FileLoaderPrivate::documentParsed (this=0x2b7eb50, doc=<optimized out>, error=...) at /home/shentey/Projekte/marble/src/src/lib/FileLoader.cpp:305
#8  0x00007f98e78ee8ec in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#9  0x00007f98e8f27137 in Marble::MarbleRunnerManager::parsingFinished (this=<optimized out>, _t1=0x7f9870003030, _t2=...) at /home/shentey/Projekte/marble/build/src/lib/MarbleRunnerManager.moc:212
#10 0x00007f98e8f27181 in Marble::MarbleRunnerManagerPrivate::addParsingResult (this=<optimized out>, document=<optimized out>, error=...) at /home/shentey/Projekte/marble/src/src/lib/MarbleRunnerManager.cpp:416
#11 0x00007f98e8f28ab6 in Marble::MarbleRunnerManager::qt_static_metacall (_o=0x2b7eb58, _c=<optimized out>, _id=14, _a=0x7f98701376f0) at /home/shentey/Projekte/marble/build/src/lib/MarbleRunnerManager.moc:105
#12 0x00007f98e78f2c5e in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#13 0x00007f98e6c800ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#14 0x00007f98e6c86670 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#15 0x00007f98e83518aa in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#16 0x00007f98e78dac3d in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#17 0x00007f98e78ddc8f in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#18 0x00007f98e7907ef3 in ?? () from /usr/lib/libQtCore.so.4
#19 0x00007f98dfb06e46 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#20 0x00007f98dfb07198 in ?? () from /usr/lib/libglib-2.0.so.0
#21 0x00007f98dfb0723c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#22 0x00007f98e79078d5 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#23 0x00007f98e6d1d066 in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007f98e78d996f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#25 0x00007f98e78d9c65 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#26 0x00007f98e78deccb in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#27 0x000000000041d9b7 in main (argc=<optimized out>, argv=<optimized out>) at /home/shentey/Projekte/marble/src/src/kdemain.cpp:403

Reported using DrKonqi
Comment 1 Bernhard Beschow 2013-05-20 16:13:07 UTC
Git commit 5fb05709963db884f0362477ddad28fff721a914 by Bernhard Beschow.
Committed on 20/05/2013 at 17:09.
Pushed by beschow into branch 'master'.

check node type before casting KML feature to placemark

* also print a warning when unknown KML tag is encountered
* fixes crash introduced in commit 8ee588969b41890a6bd90f9b45eeb85658edf84f

M  +6    -1    src/lib/FileLoader.cpp

http://commits.kde.org/marble/5fb05709963db884f0362477ddad28fff721a914