check node type before casting KML feature to placemark

* also print a warning when unknown KML tag is encountered
* fixes crash introduced in commit 8ee588969b41890a6bd90f9b45eeb85658edf84f

BUG: 320056